--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "node": "~0.10.21"
   },
   "dependencies": {
-    "websocket": "1.0.8",
+    "ffi": "^2.1.0",
     "lawg": "1.0.3",
-    "phuture": "1.0.2",
+    "machine-uuid": "1.0.7",
     "node-uuid": "1.4.1",
-    "underscore": "1.4.4",
     "optimist": "0.3.5",
-    "machine-uuid": "1.0.7"
+    "phuture": "1.0.2",
+    "underscore": "1.4.4",
+    "websocket": "1.0.8"
   },
   "devDependencies": {
     "source-map-support": "0.1.2"
